whitespace fix.

--- a/src/less/nevi.less
+++ b/src/less/nevi.less
@@ -84,6 +84,7 @@
 	right: 50px;
 	top: 25px;
 }
+
 .overlay {
 	position: fixed;
 	background: @bg;
@@ -96,15 +97,18 @@
 	transition: opacity .35s, visibility .35s;
 	overflow: hidden;
 	z-index: 99999;
+
 	&.open {
 		opacity: .95;
 		visibility: visible;
 		height: 100%;
+
 		li {
 			animation: fadeInRight .5s ease forwards;
 			animation-delay: .35s;
 			-webkit-backface-visibility: hidden;
 			-webkit-transform:translate3d(0,0,0);
+
 			&:nth-of-type(2) {
 				animation-delay: .4s;
 			}
@@ -138,8 +142,18 @@
 			&:nth-of-type(12) {
 				animation-delay: 1s;
 			}
+			&:nth-of-type(13) {
+				animation-delay: 1.0s;
+			}
+			&:nth-of-type(14) {
+				animation-delay: 1.05s;
+			}
+			&:nth-of-type(15) {
+				animation-delay: 1.1s;
+			}
 		}
 	}
+
 	.inner{
 		margin: auto;
 		height: 100%;
@@ -147,12 +161,14 @@
     padding: 25px 0;
     overflow-y: scroll;
 	}
+
 	.logo{
 		margin: auto;
 		max-width: 125px;
 		position: relative;
 		top: 0;
 	}
+
 	nav {
 		.garamond;
 		text-align: center;
@@ -167,6 +183,7 @@
 		position: relative;
 		height: 100%;
 		width: 100%;
+
 		li {
 			font-size: 24px;
 			color: @grey;
@@ -175,19 +192,22 @@
 			text-transform: capitalize;
 			position: relative;
 			opacity: 0;
-			h1{
+
+			h1 {
 				text-transform: capitalize;
 				font-size: 24px;
 				color: @grey;
 				line-height: 21px;
 				margin-top: 38px;
-				hr{
+
+				hr {
 					width: 40px;
 					height: 2px;
 					background: @grey;
 					border: none;
 				}
 			}
+
 			a {
 				display: block;
 				position: relative;
@@ -195,11 +215,13 @@
 				text-decoration: none;
 				overflow: hidden;
 				font-weight: 400;
+
 				&:hover:after,
 				&:focus:after,
 				&:active:after {
 					width: 0;
 				}
+
 				&:after {
 					content: '';
 					position: absolute;
@@ -211,16 +233,19 @@
 					background: @grey;
 					transition: .35s;
 				}
+
 				&:hover {
 					color: @blue;
 				}
 			}
 		}
-		.spacer_li{
+
+		.spacer_li {
 			line-height: 50px;
 		}
 	}
 }
+
 .credits {
 	ul{
 		li{
